@@ -3,6 +3,8 @@ Broker:
 - Fix possible crash when using pattern ACLs.
 - Fix problems parsing config strings with multiple leading spaces. Closes
   #462154.
+- Websockets clients are now periodically disconnected if they have not
+  maintained their keepalive timer. Closes #461619.
 
 Client library:
 - Inflight limits should only apply to outgoing messages. Closes #461620.
